--- a/Internship.vcxproj
+++ b/Internship.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Internship.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="bd.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
